deploy/latest.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-page
  namespace: happylou
spec:
  ports:
  - port: 3000
  selector:
    app: landing-page
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page
  namespace: happylou
spec:
  selector:
    matchLabels:
      app: landing-page
  template:
    metadata:
      labels:
        app: landing-page
    spec:
      containers:
      - image: registry.iteam.services/happylou_landing-page:v1.2.0-dirty@sha256:2eaf909c41791f409ec8edb5cc2d9ae77f4e09e027c3add707a663965d89b5aa
        name: landing-page
        ports:
        - containerPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: happylou.se.
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Content-Security-Policy: default-src 'self'; script-src https://happylou.se https://matomo.iteam.services; style-src https://happylou.se; font-src https://happylou.se; img-src https://happylou.se; connect-src https://happylou.se https://matomo.iteam.services; manifest-src data:; frame-src 'none'; frame-ancestors 'none'; object-src 'none'; ";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-Frame-Options: DENY";
      more_set_headers "X-Xss-Protection: 0";
      more_set_headers "Strict-Transport-Security: max-age=31536000; includeSubDomains;";
      more_set_headers "Cross-Origin-Resource-Policy: same-site";
      more_set_headers "Referrer-Policy strict-origin";
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/http2-push-preload: "true"
    nginx.ingress.kubernetes.io/proxy-pass-headers: Location
  name: landing-page
  namespace: happylou
spec:
  rules:
  - host: happylou.se
    http:
      paths:
      - backend:
          service:
            name: landing-page
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - happylou.se
    secretName: landing-page-secret-tls
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: happylou
  name: happylou
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: upphandling.app.
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite / https://happylou.se permanent;
  name: redirect
  namespace: happylou
spec:
  rules:
  - host: upphandling.app
    http:
      paths:
      - backend:
          service:
            name: landing-page
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - upphandling.app
    secretName: upphandling-app-secret-tls
